--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LHC Map Overlay Demo</title>
+    <title>CERN Map Overlay Demo</title>
     <style>
-      lhc-map-overlay {
+      cern-map-overlay {
         height: 90vh;
       }
 
@@ -56,7 +56,7 @@
       <label><input type="checkbox" id="follow-location-checkbox" /> Follow Location</label>
     </div>
 
-    <lhc-map-overlay geocoder-enabled="true"></lhc-map-overlay>
+    <cern-map-overlay geocoder-enabled="true"></cern-map-overlay>
 
     <script type="module" src="/src/index.ts"></script>
     <script type="module">
@@ -66,7 +66,7 @@
       import SBS from './src/accelerators/booster';
       import FCC from './src/accelerators/fcc';
 
-      const map = document.querySelector('lhc-map-overlay');
+      const map = document.querySelector('cern-map-overlay');
       map.zoom = 12;
 
       // Create a mapping of accelerator names to objects
