Remove shadow DOM to allow targeting of classes directly

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CERN Map Overlay Demo</title>
     <style>
       cern-map-overlay {
-        height: 90vh;
+        --cern-map-height: 90vh;
       }
 
       .accelerator-controls {
