feat(map): Improve map layer and accelerator management
This commit introduces significant improvements to how the cern-map-overlay component manages its layers and accelerators, enhancing flexibility and addressing issues related to map updates and the followLocation property.

Key changes include:

*   **Dedicated `cernMap.ts` for Map-Specific Types:** Extracted `PointOfInterest`, `Accelerator`, `Location`, and a new `CernMapLayer` interface into `src/types/cernMap.ts`. This centralizes map-related type definitions and improves code organization.
*   **Refactored Layer Management:**
    *   Introduced `CernMapLayer` to associate Leaflet layers with their corresponding accelerator data and a `cernLocationRefKey` for efficient tracking of accelerator positions relative to the map's reference point.
    *   Implemented `addAcceleratorLayer` and `removeAcceleratorLayer` for internal management of Leaflet layers, decoupling them from the public `addAccelerator` and `removeAccelerator` methods.
    *   The `updateMap` method now intelligently updates accelerator layers only when their reference point changes (e.g., when `followLocation` is enabled and the map moves), preventing unnecessary re-rendering.
*   **Enhanced `followLocation` Behavior:** The `followLocation` property now correctly triggers updates to accelerator positions when the map's center changes, ensuring accelerators remain accurately placed relative to the followed location.
*   **Simplified `MapComponent` Logic:** Removed the `_isUpdatingFromMap` flag and related complexity, streamlining map update logic.
*   **Improved `fitBounds`:** The `fitBounds` method now correctly calculates bounds based on the currently active `CernMapLayer` instances.
*   **Updated Examples and README:**
    *   Added `basic.html` as a new example demonstrating basic map usage with `lat`, `lng`, `zoom`, and `follow-location` attributes.
    *   Minor formatting adjustments in existing example HTML files.
    *   Updated `READM

--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
       import { cernMap } from './src/index.ts';
 
       const map = document.querySelector('cern-map-overlay');
-      map.zoom = 11;
 
       const acceleratorCheckboxes = document.querySelectorAll('input[data-accelerator]');
       acceleratorCheckboxes.forEach((checkbox) => {
@@ -74,16 +73,16 @@
         const acceleratorObject = cernMap[acceleratorName];
         checkbox.addEventListener('change', (e) => {
           if (e.target.checked) {
-            console.log('adding accelerator', acceleratorName);
             map.addAccelerator(acceleratorName, acceleratorObject);
           } else {
-            console.log('removing accelerator', acceleratorName);
             map.removeAccelerator(acceleratorName);
           }
+          map.fitBounds();
         });
         if (checkbox.checked) {
           map.addAccelerator(acceleratorName, acceleratorObject);
         }
+        map.fitBounds();
       });
 
       const geolocateButton = document.querySelector('#geolocate-button');
